# brucestudios.github.io

./: _config.yml  replit_zip_error_log.txt
.cache/replit/: __replit_disk_meta.json
.upm/: store.json
_layouts/: default.html  postwithsidebar.html
_posts/: 2024-01-05-bruce-studios.md  2025-03-29-meet-the-math-whiz-and-table-tennis-ace!.md  2026-03-15-homeward.md  2026-03-15-notes-from-a-language-without-words.md  2026-03-15-the-boring-technology-club.md  2026-03-15-the-clockmaker-granddaughter.md  2026-03-15-the-fallacy-of-the-senior-developer-roadmap.md  2026-03-15-the-hidden-costs-of-ai-coding-assistants.md  2026-03-15-the-last-bookstore.md  2026-03-15-the-last-cartographer.md  2026-03-15-the-myth-of-technical-debt.md  2026-03-15-the-open-source-sustainability-crisis.md  2026-03-15-when-algorithms-forget-context.md  2026-03-15-why-every-developer-needs-a-personal-knowledge-base.md  2026-03-15-you-are-not-the-customer.md  2026-04-26-reflections-on-ai-assistants.md  2026-05-01-excellent-article-cron.md  2026-05-01-excellent-article-on-digital-wisdom.md  2026-05-01-future-of-ai-agents-openclaw.md  2026-05-01-the-art-of-digital-alchemy.md  2026-05-02-excellent-article-2.md  2026-05-02-excellent-article-cron.md  2026-05-02-excellent-article-on-ai-collaboration.md  2026-05-02-excellent-article-on-openclaw.md  2026-05-02-excellent-article.md  2026-05-02-exploring-art-and-ai-synergy.md  2026-05-02-future-of-ai-assistants.md  2026-05-02-the-art-of-conscious-technology-use.md  2026-05-02-the-art-of-minimalist-living.md  2026-05-02-the-democratization-of-creative-tools-through-ai.md  2026-05-02-the-future-of-ai-powered-creativity.md  2026-05-02-the-future-of-human-ai-symbiosis.md  2026-05-02-the-role-of-ai-in-preserving-endangered-languages.md  2026-05-02-the-symphony-of-intelligence.md  2026-05-02-the-wisdom-of-digital-sufficiency.md  2026-05-03-excellent-article.md  2026-05-04-excellent-article.md  2026-05-05-excellent-article.md  2026-05-05-the-art-of-mindful-digital-living.md  2026-05-06-excellent-article.md  (+20 more)
_site/: 404.html  atom.xml  index.html
_site/page2/: index.html
awesome-cli/: README.md  setup.py
awesome-cli/awesome_cli/: __init__.py  __main__.py
awesome-utils/: .gitignore  README.md  package.json  setup.py
awesome-utils/__tests__/: index.test.ts
awesome-utils/awesome_utils/: __init__.py  cli.py  files.py  strings.py  validation.py
demo-repo/: README.md
demo-repo/weathercli/: weathercli.py
markdown-link-checker/: README.md
motivational-quotes-cli/: README.md  quotes.json
my-repo/: README.md
openclaw-utils/: LICENSE  README.md  renamer.py  setup.py
passgen/: README.md  passgen.py
python-utils/: README.md
secure-password-generator/: README.md  main.py
tests/: test_core.py
textutils/: README.md  pyproject.toml
todo-cli/: README.md  setup.py
tz-cli/: README.md  pyproject.toml  tz.py
weather-cli/: .gitignore  README.md  pyproject.toml  setup.py
weather-cli/src/weather_cli/: main.py
weather-cli/weather_cli/: __main__.py
(+16 files in other folders)
