[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textutils"
version = "0.1.0"
description = "A comprehensive Python utility package for text processing and password generation."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
maintainers = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = ["text", "password", "utility", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/textutils"
Documentation = "https://github.com/yourusername/textutils#readme"
Repository = "https://github.com/yourusername/textutils.git"

[project.scripts]
textutils = "textutils.cli:main"

[tool.setuptools.packages.find]
where = ["textutils"]
include = ["textutils*"]