[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tz-cli"
version = "0.1.0"
description = "A simple command-line tool for converting time between different timezones."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = ["timezone", "cli", "time", "conversion"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourusername/tz-cli"

[project.scripts]
tz = "tz:main"

[tool.setuptools.packages.find]
where = ["."]